[package]
name = "cloudillo-push"
version.workspace = true
edition.workspace = true

[dependencies]
cloudillo-core = { path = "../cloudillo-core" }
cloudillo-types = { path = "../cloudillo-types", features = ["server"] }

# HTTP framework
axum = { version = "0.8", features = ["http2", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"

# Web Push crypto (exclusive to this crate)
ece = "2.3"
p256 = { version = "0.13", features = ["pkcs8", "pem"] }
base64 = "0.22"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
url = "2"

# HTTP/2 client for push delivery
hyper = "1.8"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
hyper-rustls = "0.27"
http-body-util = "0.1"
