[package]
name = "cloudillo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Federated, self-hosted collaboration platform with authentication, file storage, real-time editing, and activity federation"
keywords = ["cloudillo", "federation", "self-hosted", "collaboration", "decentralized"]
categories = ["web-programming", "network-programming"]
readme = "../../README.md"

[dependencies]
cloudillo-types = { workspace = true }
cloudillo-core = { workspace = true }
cloudillo-file = { workspace = true }
cloudillo-push = { workspace = true }
cloudillo-crdt = { workspace = true }
cloudillo-rtdb = { workspace = true }
cloudillo-ref = { workspace = true }
cloudillo-email = { workspace = true }
cloudillo-auth = { workspace = true }
cloudillo-proxy = { workspace = true }
cloudillo-idp = { workspace = true }
cloudillo-admin = { workspace = true }
cloudillo-profile = { workspace = true }
cloudillo-action = { workspace = true }
axum = { version = "0.8.8", features = ["http2", "macros", "multipart", "ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
futures = "0.3.32"
hyper = "1.8.1"
rustls = "0.23.36"
rustls-pki-types = { version = "1.14.0", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "set-header", "trace", "compression-gzip", "compression-br"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[lints]
workspace = true
